Add products from online shop related to IT
Add T-shirt, mouse pad product

Signed-off-by: BY1994 <lovelychoco100@gmail.com>

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 					<div class="owl-carousel owl-carousel-fullwidth">
 						<div class="item">
 							<a href="#">
-								<img src="images/slider_1.jpg" alt="Free Website Template by FreeHTML5.co">
+								<img src="images/movie_image1.jpg" alt="Free Website Template by FreeHTML5.co">
 								<div class="slider-copy">
 									<h2>Architecture #1</h2>
 								</div>
@@ -109,7 +109,7 @@
 						</div>
 						<div class="item">
 							<a href="#">
-								<img src="images/slider_2.jpg" alt="Free Website Template by FreeHTML5.co">
+								<img src="images/movie_image2.jpg" alt="Free Website Template by FreeHTML5.co">
 								<div class="slider-copy">
 									<h2>Architecture #1</h2>
 								</div>
@@ -117,7 +117,7 @@
 						</div>
 						<div class="item">
 							<a href="#">
-								<img src="images/slider_3.jpg" alt="Free Website Template by FreeHTML5.co">
+								<img src="images/movie_image3.jpg" alt="Free Website Template by FreeHTML5.co">
 								<div class="slider-copy">
 									<h2>Architecture #1</h2>
 								</div>
@@ -142,31 +142,38 @@
 						<div class="owl-carousel owl-carousel-carousel">
 							<div class="item">
 								<div class="gtco-item">
-									<a href="#"><img src="images/img_1.jpg" alt="" class="img-responsive"></a>
-									<h2><a href="#">New York Arena</h2></a>
-									<p class="role">New York</p>
+									<a target="_sub" href="https://www.aliexpress.com/item/4000039164214.html?spm=a2g0o.detail.1000014.29.7f3f109diMXGBg&gps-id=pcDetailBottomMoreOtherSeller&scm=1007.13338.128125.0&scm_id=1007.13338.128125.0&scm-url=1007.13338.128125.0&pvid=6390ffb6-2a91-4b73-b06b-ed49d77ddcc5">
+										<img src="images/product1.PNG" alt="" class="img-responsive"></a>
+									<h2><a target="_sub" href="https://www.aliexpress.com/item/4000039164214.html?spm=a2g0o.detail.1000014.29.7f3f109diMXGBg&gps-id=pcDetailBottomMoreOtherSeller&scm=1007.13338.128125.0&scm_id=1007.13338.128125.0&scm-url=1007.13338.128125.0&pvid=6390ffb6-2a91-4b73-b06b-ed49d77ddcc5">
+										[T-shirt] While Programmer Alive</h2></a>
+									<p class="role">US $10.75 ~ 12.29</p>
 								</div>
 							</div>
 							<div class="item">
 								<div class="gtco-item">
-									<a href="#"><img src="images/img_2.jpg" alt="" class="img-responsive"></a>
-									<h2><a href="#">Eagle Park</h2></a>
-									<p class="role">London</p>
+									<a target="_sub" href="https://www.aliexpress.com/item/32978651402.html?spm=a2g0o.detail.1000060.3.43fe7f0fZZ8EOe&gps-id=pcDetailBottomMoreThisSeller&scm=1007.13339.146401.0&scm_id=1007.13339.146401.0&scm-url=1007.13339.146401.0&pvid=9867b575-1f09-4d4f-8257-7306b7b9a18b">
+										<img src="images/product2.PNG" alt="" class="img-responsive"></a>
+									<h2><a target="_sub" href="https://www.aliexpress.com/item/32978651402.html?spm=a2g0o.detail.1000060.3.43fe7f0fZZ8EOe&gps-id=pcDetailBottomMoreThisSeller&scm=1007.13339.146401.0&scm_id=1007.13339.146401.0&scm-url=1007.13339.146401.0&pvid=9867b575-1f09-4d4f-8257-7306b7b9a18b">
+										[T-shirt] Choose your Weapon</h2></a>
+									<p class="role">US $10.80 ~ 14.15</p>
 								</div>
 							</div>
 							<div class="item">
 								<div class="gtco-item">
-									<a href="#"><img src="images/img_3.jpg" alt="" class="img-responsive"></a>
-									<h2><a href="#">Nationals Park</h2></a>
-									<p class="role">Paris, France</p>
+									<a target="_sub" href="https://brunch.co.kr/@uhwan/5">
+										<img src="images/product3.PNG" alt="" class="img-responsive"></a>
+									<h2><a target="_sub" href="https://brunch.co.kr/@uhwan/5">[Mouse Pad] Design Tool</h2></a>
+									<p class="role">￦5000</p>
 								</div>
 							</div>
 
 							<div class="item">
 								<div class="gtco-item">
-									<a href="#"><img src="images/img_1.jpg" alt="" class="img-responsive"></a>
-									<h2><a href="#">New York Arena</h2></a>
-									<p class="role">New York</p>
+									<a target="_sub" href="https://smartstore.naver.com/sharp/products/4737550746?NaPm=ct%3Dk70hg2wg%7Cci%3De3bed29a156753677e1c63ccbc9707b14de30afa%7Ctr%3Dslsl%7Csn%3D263297%7Cic%3D%7Chk%3D6ddf147005fecbf7f698dbe28b85522f4ed25a3f">
+										<img src="images/product4.PNG" alt="" class="img-responsive"></a>
+									<h2><a target="_sub" href="https://smartstore.naver.com/sharp/products/4737550746?NaPm=ct%3Dk70hg2wg%7Cci%3De3bed29a156753677e1c63ccbc9707b14de30afa%7Ctr%3Dslsl%7Csn%3D263297%7Cic%3D%7Chk%3D6ddf147005fecbf7f698dbe28b85522f4ed25a3f">
+										[Mouse Pad] Shortcut</h2></a>
+									<p class="role">￦4900</p>
 								</div>
 							</div>
 							<div class="item">
